NoTicket: Simple cleanup of this class. Removed commented code, added some type safety, removed new Integer()s
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@9872 37aeb1de-b14b-0410-9a0e-82b28170d228